# ocr-microservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  deploy.ps1  docker-compose.yml  main.py  pyproject.toml  schemas.py  task.py  tasks.py
.github/workflows/: pipeline.yml
src/: config.py  main.py  prompts.py  schemas.py  tasks.py
tests/: conftest.py  test_main.py  test_tasks.py
